feat: Enhance node discovery logging and improve test scripts
## Enhanced UDP Discovery Logging
- Upgraded Kademlia DHT protocol logging from DEBUG to INFO level
  - NodeHandler: handlePing(), handlePong(), handleNeighbours(), handleFindNode(), sendFindNode()
  - KadService: Boot node initialization with detailed logging
  - DiscoverTask: Initialization and scheduling
- Significantly improved visibility of UDP discovery protocol activity
- Makes node discovery completely transparent in production logs

## Fixed Discovery Test Scripts
- Updated grep patterns to match new log format
  - "Sending PING to node:" instead of "Send PING"
  - "Received PONG from node:" instead of "Receive PONG"
- Fixed sed extraction pattern for discovered node counts
  - Was incorrectly matching year "2025" from timestamps
  - Now correctly extracts count from "Discovered Nodes: N"
- All discovery metrics now report accurately

## Removed Obsolete Configuration
- Deleted test-nodes/discovery-test/logback-discovery.xml
  - Project uses slf4j-simple, not logback (no logback dependency)
  - Configuration file was completely ineffective
- Removed -Dlogback.configurationFile references from test scripts
- Renamed test-discovery.sh → test.sh
- Renamed verify-discovery.sh → verify.sh

## Documentation Updates
- Updated CHANGELOG.md with all changes
- Updated test-nodes/discovery-test/README.md
  - Removed logback reference from directory structure
  - Updated grep pattern examples to match new format
- Updated README.md with comprehensive node discovery guide

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>